# flask-app

./: .env  Dockerfile  README.md  config.py  docker-compose.yml  forms.py  main.py  models.py  pyproject.toml  requirements.txt
.github/prompts/: build.prompt.md
instance/: site.db
migrations/versions/: 9c3a43bff7e6_increase_password_column_length_to_128.py  d33ae5de840d_increase_password_field_length_to_255.py
static/css/: style.css
static/js/: script.js
templates/: about.html  base.html  contact.html  dashboard.html  index.html  login.html  profile.html  register.html  reset_request.html  reset_token.html  services.html
templates/errors/: 404.html  500.html
